# tabnine-nvim

./: .editorconfig  .gitignore  .gitmodules  .luarc.json  .styluaignore  LICENSE.md  README.md  build.lua  dl_binaries.ps1  dl_binaries.sh  stylua.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: chat.yaml  lua-format-check-pr.yml  lua-format-push.yml
chat/: Cargo.toml  asset-manifest.json  index.html  shell.nix
chat/src/: main.rs
chat/static/: index-1f7409cd.js  index-59848d71.js
chat/static/js/: main.5b800211.js  main.5b800211.js.map  main.66be9a30.js  main.66be9a30.js.map  main.6b420c2b.js  main.6b420c2b.js.map  main.71883e5c.js  main.71883e5c.js.map  main.9a58faf7.js  main.9a58faf7.js.map
doc/: tabnine.txt
examples/: javascript.js  python.py
expamples/: python.py  typescript.ts
lua/: tabnine.lua
lua/lualine/components/: tabnine.lua
lua/tabnine/: apply.lua  auto_commands.lua  binary.lua  build.lua  capabilties.lua  completion.lua  config.lua  consts.lua  diff.lua  features.lua  keymaps.lua  lsp.lua  state.lua  status.lua  user_commands.lua  utils.lua  workspace.lua
lua/tabnine/chat/: apply.lua  auto_commands.lua  binary.lua  chat.lua  codelens.lua  init.lua  setup.lua  user_commands.lua
tests/: .neoconf.json  README.md  init.sh  init_spec.lua  utils_spec.lua
